--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
-    "alasql": "^0.3.5",
     "angular2-router-loader": "^0.3.4",
+    "angularfire2": "^2.0.0-beta.6",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "firebase": "^3.6.5",
     "jquery": "^3.1.1",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.1",
